prevent wrap on url bar

--- a/src/components/Bar/Bar.module.scss
+++ b/src/components/Bar/Bar.module.scss
@@ -59,6 +59,8 @@
 	padding: 0.45rem 1.5rem;
 	border-radius: 1rem;
 	flex: 1;
+	white-space: nowrap;
+	overflow: hidden;
 	color: #444;
 	font-size: 0.95rem;
 	border: none;
